
3.4.11 Updates & Features
-----
- Added "Skip Seed Backup" option when creating a new wallet; seed icon updated with warning
- Added "Deposit BCH before tokens can be created" message prompt when creating a new token if balance < 0.0001 BCH; auto-switch to "Receive" tab
- Fixed bug disabling the token amount field when Address toggle is not set to SLP format
- Added user confirmation in Burn Tool dialog
- Updated Receive tab with address toggle below current address.
- Updated Receive tab to auto switch to SLP address format if balance > 0.0001 BCH; otherwise display BCH format
- Updated Receive tab to include "Low balance" notification.
- Set maximum length for token amount field name
- Various improvements to the UI

3.4.12 Updates & Features
-----
- Add Schnorr signature as an optional feature
- Fix bug in wizard dialog for restore seed
- Minor tweaks and fixes to SLP related UI
- Ported various improvements from mainline Electron Cash latest master branch

3.4.13 Updates & Features
-----
- Send BCH amount and SLP amount simultaneously
- Now tokens are now added to the Tokens tab automatically (distinguished with red text with "right-click to add" note)
- Added minting baton indication column in the Tokens tab
- Completed multi-payment support for simpleledger per URI spec, send tab only, doesn't include tokenflags
- Added https://simpleledger.info to block explorers list, removed non SLP-enabled explorers from list 
- Enable SLP for "slp_imported_privkey" and "slp_imported_addr" wallet types
- Fixed bug causing transaction to hang after uploading a Token Document
- Added support for signing multisig transactions without "x_pubkey" format, also can sign multisig from non-multisig wallet
- Various other fixes were ported from mainline Electron Cash
- Improved isolated of SLP gui from non-SLP type wallets
- Fixed gui window size issue with high resolution monitors (e.g., Microsoft Surface)